--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\FK_2\\Documents\\GitHub\\IntelligentSystem-A2\\InteligentesLab3","type":"PROJECT","hints":{"PROJECT_NAME":"InteligentesLab3"}},"ABSENT"]]
