First Graphical representation
Some basic funtionalities of the graphical representation has been implemented

--- a/InteligentesLab3/bin/.gitignore
+++ b/InteligentesLab3/bin/.gitignore
@@ -1,9 +1,2 @@
-/Action.class
-/Field.class
-/Frontier.class
-/Interface.class
-/Node.class
-/Problem.class
-/Strategy.class
-/Successor.class
-/UninformedSearch.class
+/presentation/
+/domain/
